--- a/package.json
+++ b/package.json
@@ -3,10 +3,20 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "dev": "concurrently \"cd backend && bun run dev\" \"cd frontend && bun run dev\"",
+    "start": "concurrently \"cd backend && bun run start\" \"cd frontend && bun run dev\""
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "concurrently": "^9.1.2",
+    "knex": "^3.0.0",
+    "sqlite3": "^5.0.0"
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "yahoo-finance2": "^3.13.0"
   }
 }
