--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,6 +5,8 @@
     "moduleResolution": "bundler",
     "outDir": "./dist",
     "strict": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
