--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/bun": "^1.3.8",
     "@types/date-fns": "^2.6.3",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
