--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "knex": "^3.1.0",
     "morgan": "^1.10.1",
     "node-cache": "^5.1.2",
+    "short-uuid": "^6.0.3",
     "sqlite3": "^5.1.7",
     "yahoo-finance2": "^3.13.0"
   }
