--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "bun --watch src/server.ts",
     "start": "bun src/server.ts",
     "migrate": "bun src/scripts/migrate.ts && bun src/scripts/export-table-ddl.ts",
-    "rollback": "bun src/scripts/rollback.ts"
+    "rollback": "bun src/scripts/rollback.ts",
+    "snapshot": "bun scripts/trigger-snapshot.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "knex": "^3.1.0",
